# perry

./: .gitignore  06_math_intensive  13_factorial  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_AUDIT.md  README.md  build_err.txt  build_err_2.txt  build_err_3.txt  build_output.txt  check_output.txt  compose_test  container_demo  container_test  coverage_summary.md  forgejo_app  forgejo_example  forgejo_stack  forgejo_stack_bin  geisterhand_test  geisterhand_test.ts  geisterhand_test_normal  mango.db  response.txt  smoke_test.ts  stdlib_test_output.txt  test_forgejo.ts  test_repro.ts
benchmarks/: README.md  baseline.json  binary-size-baseline.json  compare_backends.sh
crates/perry-container-compose/: Cargo.toml
crates/perry-container-compose/examples/forgejo/: main.ts  package.json
crates/perry-container-compose/examples/multi-service/: main.ts
crates/perry-container-compose/examples/simple/: main.ts
crates/perry-container-compose/src/: backend.rs  cli.rs  compose.rs  config.rs  env.rs  error.rs  ffi.rs  installer.rs  lib.rs  main.rs  orchestrate.rs  project.rs  service.rs  types.rs  workload.rs  yaml.rs
crates/perry-container-compose/src/backend/: apple.rs  docker.rs  mod.rs  podman.rs
crates/perry-container-compose/src/commands/: build.rs  inspect.rs  mod.rs  run.rs  start.rs  stop.rs
crates/perry-container-compose/src/entities/: compose.rs  mod.rs  service.rs
crates/perry-container-compose/src/orchestrate/: deps.rs  env.rs  mod.rs  project.rs
crates/perry-container-compose/src/testing/: mock_backend.rs  mod.rs
crates/perry-container-compose/tests/: backend_detection_test.rs  backend_tests.rs  cli_tests.rs  compose_test.rs  compose_tests.proptest-regressions  compose_tests.rs  config_tests.rs  container_ops.rs  data_model_tests.rs  error_tests.rs  functional_test.rs  functional_tests.rs  integration_tests.rs  interpolation_props.proptest-regressions  interpolation_props.rs  merge_props.rs  orchestration.rs  orchestration_integration_tests.rs  orchestration_tests.rs  project_tests.rs  round_trip.proptest-regressions  round_trip.rs  service_tests.rs  startup_order_test.rs  types_tests.rs  workload_tests.rs  yaml_tests.proptest-regressions  yaml_tests.rs
crates/perry-container-compose/tests/common/: mod.rs
crates/perry-container-compose/tests/fixtures/: simple-two-service.yaml
crates/perry-container-compose/tests/functional/: compose_engine_test.rs  orchestrate_tests.rs
crates/perry-container-compose/tests/integration/: container_lifecycle_test.rs
crates/perry-ui-watchos/: Cargo.toml
crates/perry-ui-watchos/src/: app.rs  lib.rs  state.rs  tree.rs
crates/perry-ui-watchos/swift/: PerryWatchApp.swift
docs/: audit-lazy-json.md  book.toml  (+2 more)
(+431 files in other folders)
