[package]
name = "perry-container-compose"
version = "0.5.56"
edition = "2021"
license = "MIT"
description = "Native Rust reimplementation of container-compose functionality for Perry"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
regex = "1"
rand = "0.8"
md-5 = "0.10"
hex = "0.4"
dashmap = "5"
futures = "0.3"
which = "6"
once_cell = "1.19"

[dev-dependencies]
proptest = "1"
