[package]
name = "perry-container-compose"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Perry Contributors"]
description = "Port of container-compose/cli to Rust - Docker Compose-like experience for Apple Container"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
md-5 = "0.10"
hex = "0.4"
dotenvy = { workspace = true }
indexmap = { version = "2.2", features = ["serde"] }
rand = "0.8"
regex = "1"
which = "6.0"
once_cell = "1.19"
home = "0.5"
shellexpand = "3.1"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1"

[features]
default = []
ffi = []
integration-tests = []

[[bin]]
name = "perry-compose"
path = "src/main.rs"
