[package]
name = "perry-container-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
md5 = "0.7"
rand = "0.8"
which = "6.0"
async-trait = "0.1"
log = "0.4"
futures-util = "0.3"
